fix letter spacing utility classes

--- a/web/app/styles/utilities/_text.scss
+++ b/web/app/styles/utilities/_text.scss
@@ -133,12 +133,12 @@
 // Letter Spacing
 // ---
 
-.u-text-letter-spacing {
+.u-text-letter-spacing-small {
     letter-spacing: 1px !important;
 }
 
 .u-text-letter-spacing-normal {
-    letter-spacing: initial !important;
+    letter-spacing: normal !important;
 }
 
 
